# 2finance-sdk-client

./: .gitignore  Makefile  README.MD  go.mod
.github/workflows/: ci.yml
auth/: auth.go  auth_test.go  client_credentials_test.go
client_2finance/: cashback.go  client_2finance.go  coupons.go  drop.go  prepared_transaction.go  review.go
contracts/: README.md  service-catalog.v1.json
contracts/examples/: auth-client-credentials.json  domain-operations.json  error.json  idempotency.json  matchengine-order-command.json  pagination.json  request-options.json  service-catalog.json
contracts/schemas/: domain-operations.v1.json  error.v1.json  idempotency.v1.json  pagination.v1.json  request-options.v1.json  service-catalog.v1.json
cpp/: CMakeLists.txt  README.md
cpp/examples/: auth_token_source.cpp  error_handling.cpp  quickstart.cpp  request_options.cpp
cpp/include/twofinance/: sdk_client.hpp
cpp/tests/: sdk_client_test.cpp
dart/: README.md
dart/auth/: .gitignore  README.md  analysis_options.yaml  pubspec.yaml
dart/blockchain/: .gitignore  analysis_options.yaml  dart_test.yaml  pubspec.yaml
dart/sdk/: README.md  pubspec.yaml
docs/: authentication.md  feedback-loop.md  implementation-matrix.md  spec-authoring.md  spec-driven-development.md  spec-driven-harness.md  spec-index.md
go/: Makefile  catalog.go  client.go  client_test.go  config.go  errors.go  go.mod  go.sum  models.go  operation_call.go  options.go  version.go
go/analytics/: client.go
go/auth/: auth.go  client_credentials.go  client_credentials_test.go  user_client.go
go/client_2finance/: cashback.go  client_2finance.go  lifecycle.go  member_get_member.go  payment.go  prepared_transaction.go  raffle.go  token.go  wallet.go
go/hummingbot/: client.go
go/keystore/: client.go
go/matchengine/: client.go
go/mcp/: client.go
go/network/: client.go
go/orchestrator/: client.go
go/planner/: client.go
java/: Makefile  README.md  pom.xml
javascript/: README.md  package.json
php/: README.md  composer.json
python/: README.md  pyproject.toml
python/examples/: auth_client_credentials.py  error_handling.py  quickstart.py  request_options.py
python/tests/: test_sdk.py
python/twofinance_sdk_client/: __init__.py  auth.py  client.py  config.py  domains.py  models.py  service.py
tools/: validate-sdk-structure.mjs
typescript/: README.md  package.json  tsconfig.json
wallet_manager/: wallet_manager.go
(+156 files in other folders)
