[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "twofinance-sdk-client"
version = "0.1.0"
description = "Unified Python client for 2Finance services."
requires-python = ">=3.10"

[tool.twofinance.sdk]
example = "examples/quickstart.py"
license = { text = "MIT" }

[tool.setuptools.packages.find]
include = ["twofinance_sdk_client*"]
